--- a/scoreboard.html
+++ b/scoreboard.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siber Güvenlik Oyunu - Skor Tablosu</title>
+    <title>Teknofest Siber Güvenlik - Skor Tablosu</title>
+    
+    <!-- Base URL ve Canonical ayarları -->
+    <base href="/teknofest_siberguvenlik/">
+    <link rel="canonical" href="https://fsemiha.github.io/teknofest_siberguvenlik/scoreboard.html">
     <style>
         @font-face {
             font-family: 'Gilmer';
-            src: url('fonts/Gilmer Regular.otf') format('opentype');
+            src: url('/teknofest_siberguvenlik/fonts/Gilmer Regular.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
         }
         @font-face {
             font-family: 'Gilmer';
-            src: url('fonts/Gilmer Bold.otf') format('opentype');
+            src: url('/teknofest_siberguvenlik/fonts/Gilmer Bold.otf') format('opentype');
             font-weight: bold;
             font-style: normal;
         }
         @font-face {
             font-family: 'Gilmer Light';
-            src: url('fonts/Gilmer Light.otf') format('opentype');
+            src: url('/teknofest_siberguvenlik/fonts/Gilmer Light.otf') format('opentype');
             font-weight: 300;
             font-style: normal;
         }
         @font-face {
             font-family: 'Conthrax';
-            src: url('fonts/conthrax-sb.otf') format('opentype');
+            src: url('/teknofest_siberguvenlik/fonts/conthrax-sb.otf') format('opentype');
             font-weight: bold;
             font-style: normal;
         }
